# Proyecto_Reconstruccion

./: .gitignore  CMakeLists.txt  CargadorImagenes.cpp  CargadorImagenes.h  Interfaz.cpp  Interfaz.h  Procesador.cpp  Procesador.h  ProcesadorImagenes.cpp  ProcesadorImagenes.h  Punto3D.cpp  Punto3D.h  README.md  imagenes.txt  main.cpp  puntos.txt  puntosBordes.txt  puntosDetallados.txt
